fix overflow on css-mobile

--- a/public/stylesheets/style-mobile.css
+++ b/public/stylesheets/style-mobile.css
@@ -19,7 +19,7 @@
 	body
 	{
 		padding-top: 0;
-		overflow-x: hidden;
+		overflow-x: hidden !important;
 		position: relative;	
 	}
 
