--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1279,7 +1279,7 @@
 		border-radius: 6px;
 		border: 1px solid #e6e6e6;
 		font-size: 1em;
-		padding: 0px 4px;
+		padding: 4px 4px;
 		text-align: center;
 		margin-bottom: 5px;
 		max-width: 100%;
